--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,8 +15,11 @@
         }
     },
     "remoteUser": "sail",
-    "postCreateCommand": "chown -R 1000:1000 /var/www/html",
-    // "forwardPorts": [],
+    "postCreateCommand": "chown -R 1000:1000 /var/www/html && cp /var/www/html/.env.example .env && composer install --ignore-platform-reqs && ./vendor/bin/sail php artisan key:generate && ./vendor/bin/sail php artisan storage:link",
+    "forwardPorts": [
+        8025,
+        8080
+    ],
     "portsAttributes": {
         "80": {
             "label": "Application",
@@ -27,6 +30,9 @@
         },
         "8080": {
             "label": "phpMyAdmin"
+        },
+        "5173": {
+            "label": "Vite HRM"
         }
     }
     // "runServices": [],
