--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     },
     "devDependencies": {
         "axios": "^1.1.2",
+        "eslint": "^8.41.0",
+        "eslint-config-prettier": "^8.8.0",
+        "eslint-plugin-vue": "^9.14.1",
         "laravel-vite-plugin": "^0.7.5",
-        "vite": "^4.0.0"
+        "prettier": "2.8.8",
+        "vite": "^4.0.0",
+        "vite-plugin-eslint": "^1.8.1"
     }
 }
