--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -35,7 +35,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-versions: ['8.1', '8.2']
+        php-versions: ["8.1", "8.2"]
 
     steps:
       - name: Checkout code
@@ -76,7 +76,7 @@ jobs:
         run: npm ci
 
       - name: Prepare the application
-         run: |
+        run: |
           php -r "file_exists('.env') || copy('.env.example', '.env');"
           php artisan key:generate
 
