--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,9 +1,15 @@
 name: Continous Integration
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  setup:
+  ci:
     runs-on: ubuntu-latest
 
     env:
@@ -49,6 +55,9 @@ jobs:
           extensions: mbstring, dom, fileinfo, mysql
           coverage: xdebug
 
+      - name: Configure matchers for PHPUnit
+        uses: mheap/phpunit-matcher-action@v1
+
       - name: Get composer cache directory
         id: composer-cache
         run: echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
@@ -91,71 +100,23 @@ jobs:
           DB_PORT: ${{ job.services.mysql.ports['3306'] }}
           REDIS_PORT: ${{ job.services.redis.ports['6379'] }}
 
-  laravel-pint:
-    runs-on: ubuntu-latest
-
-    needs: setup
-
-    steps:
-      - name: Run ls -la
-        run: ls -la
-
       - name: Run Laravel Pint
         run: vendor/bin/pint --test --format=checkstyle | cs2pr
 
-  prettier:
-    runs-on: ubuntu-latest
-
-    needs: setup
-
-    steps:
       - name: Run Prettier
         run: prettier --check resources/js
 
-  larastan:
-    runs-on: ubuntu-latest
-
-    needs: setup
-
-    steps:
       - name: Run Larastan
         run: vendor/bin/phpstan analyse --memory-limit=2G --error-format=checkstyle | cs2pr
 
-  eslint:
-    runs-on: ubuntu-latest
-
-    needs: setup
-
-    steps:
       - name: Run ESLint
         run: eslint --ext .js,.vue --ignore-path .gitignore
-
-  pest:
-    runs-on: ubuntu-latest
-
-    needs: setup
-
-    steps:
-      - name: Configure matchers
-        uses: mheap/phpunit-matcher-action@v1
 
       - name: Run Pest tests
         run: vendor/bin/pest --teamcity
 
-  php-security-checker:
-    runs-on: ubuntu-latest
-
-    needs: setup
-
-    steps:
       - name: Run PHP Security Checker
         run: vendor/bin/security-checker security:check
 
-  npm-audit:
-    runs-on: ubuntu-latest
-
-    needs: setup
-
-    steps:
       - name: Run NPM Audit
         run: npm audit
