--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -9,13 +9,18 @@ on:
       - main
 
 jobs:
-  laravel-tests:
+  continuous-integration:
+    name: Laravel (PHP ${{ matrix.php-versions }})
+
     runs-on: ubuntu-latest
 
     env:
       DB_DATABASE: laravel
       DB_USERNAME: root
       DB_PASSWORD: password
+      DB_HOST: 127.0.0.1
+      DB_PORT: 3306
+      REDIS_PORT: 6379
       BROADCAST_DRIVER: log
       CACHE_DRIVER: redis
       QUEUE_CONNECTION: redis
@@ -52,7 +57,7 @@ jobs:
         with:
           php-version: ${{ matrix.php-versions }}
           tools: composer:v2, cs2pr
-          extensions: mbstring, dom, fileinfo, mysql
+          extensions: mbstring, dom, fileinfo, mysql, libxml, xml, xmlwriter, dom, tokenizer, filter, json, phar, pcre, openssl, pdo, intl, curl, redis
           coverage: xdebug
 
       - name: Configure matchers for PHPUnit
