--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,6 +19,7 @@
                 "editor.codeActionsOnSave": {
                     "source.fixAll.eslint": true
                 },
+                "files.autoSave": "onFocusChange",
                 "[vue]": {
                     "editor.defaultFormatter": "esbenp.prettier-vscode"
                 },
@@ -29,7 +30,7 @@
         }
     },
     "remoteUser": "sail",
-    "postCreateCommand": "chown -R 1000:1000 /var/www/html",
+    "postCreateCommand": "chown -R 1000:1000 /var/www/html && cp .env.example .env && composer install && php artisan key:generate && npm install && npm run dev",
     "forwardPorts": [
         8025,
         8080
