--- a/package.json
+++ b/package.json
@@ -6,13 +6,20 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@inertiajs/vue3": "^1.0.0",
+        "@tailwindcss/forms": "^0.5.3",
+        "@vitejs/plugin-vue": "^4.0.0",
+        "autoprefixer": "^10.4.12",
         "axios": "^1.1.2",
         "eslint": "^8.41.0",
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-vue": "^9.14.1",
         "laravel-vite-plugin": "^0.7.5",
+        "postcss": "^8.4.18",
         "prettier": "2.8.8",
+        "tailwindcss": "^3.2.1",
         "vite": "^4.0.0",
-        "vite-plugin-eslint": "^1.8.1"
+        "vite-plugin-eslint": "^1.8.1",
+        "vue": "^3.2.41"
     }
 }
