--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
         "inertiajs/inertia-laravel": "^0.6.8",
+        "jetstreamlabs/zora": "^4.0",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
@@ -20,6 +21,7 @@
         "barryvdh/laravel-ide-helper": "^2.13",
         "enlightn/security-checker": "^1.10",
         "fakerphp/faker": "^1.9.1",
+        "laravel-lang/common": "^3.1",
         "laravel/breeze": "^1.21",
         "laravel/pint": "^1.10",
         "laravel/sail": "^1.18",
