--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
         "vite": "^4.0.0",
         "vite-plugin-eslint": "^1.8.1",
         "vue": "^3.2.41"
+    },
+    "dependencies": {
+        "laravel-precognition-vue-inertia": "^0.2.1"
     }
 }
