--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
         "eslint": "^8.41.0",
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-vue": "^9.14.1",
+        "laravel-echo": "^1.15.1",
         "laravel-vite-plugin": "^0.7.5",
         "postcss": "^8.4.18",
         "prettier": "2.8.8",
+        "pusher-js": "^8.0.2",
         "tailwindcss": "^3.2.1",
         "vite": "^4.0.0",
         "vite-plugin-eslint": "^1.8.1",
