--- a/.env.example
+++ b/.env.example
@@ -43,7 +43,7 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-PUSHER_HOST=pusher
+PUSHER_HOST=soketi
 PUSHER_PORT=6001
 PUSHER_SCHEME=http
 PUSHER_APP_ID=app-id
