--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
         "vue": "^3.2.41"
     },
     "dependencies": {
-        "laravel-precognition-vue-inertia": "^0.2.1"
+        "@intlify/unplugin-vue-i18n": "^0.11.0",
+        "@vueuse/core": "^10.1.2",
+        "laravel-precognition-vue-inertia": "^0.2.1",
+        "vue-i18n": "^9.2.2"
     }
 }
