--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "pusher/pusher-php-server": "^7.2",
+        "spatie/laravel-settings": "^3.1",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
