--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -19,6 +19,7 @@ jobs:
       DB_USERNAME: root
       DB_PASSWORD: password
       DB_HOST: 127.0.0.1
+      REDIS_HOST: 127.0.0.1
       BROADCAST_DRIVER: log
       CACHE_DRIVER: redis
       QUEUE_CONNECTION: redis
