--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,8 @@
         "laravel/tinker": "^2.8",
         "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-settings": "^3.1",
+        "symfony/http-client": "^6.2",
+        "symfony/mailgun-mailer": "^6.3",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
