--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "eslint": "^8.41.0",
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-vue": "^9.14.1",
+        "husky": "^8.0.3",
         "laravel-echo": "^1.15.1",
         "laravel-vite-plugin": "^0.7.5",
         "postcss": "^8.4.18",
