--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,7 @@ services:
         volumes:
             - "sail-mysql:/var/lib/mysql"
             - "./docker/mysql/create-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh"
+            - "./docker/mysql/create-couleur3-database.sh:/docker-entrypoint-initdb.d/10-create-couleur3-database.sh"
         networks:
             - sail
         healthcheck:
