--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -38,7 +38,8 @@
         8025,
         8080,
         6001,
-        5173
+        5173,
+        8900
     ],
     "portsAttributes": {
         "80": {
@@ -56,6 +57,9 @@
         },
         "6001": {
             "label": "Soketi"
+        },
+        "8900": {
+            "label": "Minio"
         }
     }
 }
