--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "league/flysystem-aws-s3-v3": "^3.15",
         "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-settings": "^3.1",
         "symfony/http-client": "^6.2",
