--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,6 +14,7 @@
                 "nhedger.inertia",
                 "dbaeumer.vscode-eslint",
                 "esbenp.prettier-vscode",
+                "bradlc.vscode-tailwindcss",
                 "cpylua.language-postcss"
             ],
             "settings": {
