--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@intlify/unplugin-vue-i18n": "^0.11.0",
         "@vueuse/core": "^10.1.2",
         "laravel-precognition-vue-inertia": "^0.3.1",
+        "pinia": "^2.1.3",
         "vue-i18n": "^9.2.2"
     }
 }
