fix: Question form, endInteraction

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
             - soketi
     mysql:
         image: "mysql/mysql-server:8.0"
+        platform: 'linux/x86_64'
         ports:
             - "${FORWARD_DB_PORT:-3306}:3306"
         environment:
