--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "tailwindcss": "^3.3.2",
         "vite": "^4.3.9",
         "vite-plugin-eslint": "^1.8.1",
+        "vite-plugin-pwa": "^0.16.4",
         "vue": "^3.3.4"
     },
     "dependencies": {
