Fix prettier extension error.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -28,7 +28,8 @@
                 },
                 "[javascript]": {
                     "editor.defaultFormatter": "esbenp.prettier-vscode"
-                }
+                },
+                "prettier.prettierPath": "./node_modules/prettier"
             }
         }
     },
