--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "postcss": "^8.4.24",
         "prettier": "2.8.8",
         "pusher-js": "^8.1.0",
+        "tailwind-scrollbar": "^3.0.4",
         "tailwindcss": "^3.3.2",
         "vite": "^4.3.9",
         "vite-plugin-eslint": "^1.8.1",
