--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "@vueuse/core": "^10.1.2",
         "laravel-precognition-vue-inertia": "^0.3.1",
         "pinia": "^2.1.3",
+        "pinia-plugin-persistedstate": "^3.1.0",
         "vue-i18n": "^9.2.2"
     }
 }
